--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,8 @@
   <exec_depend>shape_msgs</exec_depend>
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>opencv_interfaces</exec_depend>
+
 
   <export>
     <build_type>ament_cmake</build_type>
